--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -54,10 +54,10 @@ jobs:
         run: "flutter pub get"
 
       - name: Build APPBUNDLE
-        run: "flutter build appbundle --build-name=${{ env.MAJOR }}.${{ env.MINOR }}.${{ env.PATCH }}"
+        run: "flutter build appbundle"
 
       - name: Build APK
-        run: "flutter build apk --split-per-abi --build-name=${{ env.MAJOR }}.${{ env.MINOR }}.${{ env.PATCH }}"
+        run: "flutter build apk --split-per-abi"
 
       - name: Create Github Release
         uses: ncipollo/release-action@v1
@@ -65,6 +65,13 @@ jobs:
           artifacts: "build/app/outputs/bundle/release/*.aab,build/app/outputs/flutter-apk/*.apk"
           # tag: $GIT_TAG_NAME
           # token: ${{ secrets.PERSONAL_RELEASE_TOKEN }}
+          #
+      # - name: Save APPBUNDLE to Artifacts
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: APPBUNDLE
+      #     path: build/app/outputs/bundle/release/*.aab
+
 
      
    
