--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,8 +94,8 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         // def abiCodes = ['armeabi-v7a':1, 'arm64-v8a':2, x86_64:3]
         // def abi = project.hasProperty('flutterBuildAbi') ? project.flutterBuildAbi : 'armeabi-v7a'
-        versionCode flutterVersionCode.toInteger()  
-        versionName flutterVersionName
+        versionCode 2  
+        versionName "0.2.6" 
         multiDexEnabled true
     }
     signingConfigs {
