--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,6 +50,8 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
+    def versionCode = 2
+
     defaultConfig {
         // Map for the version code that gives each ABI a value.
 
@@ -94,7 +96,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         // def abiCodes = ['armeabi-v7a':1, 'arm64-v8a':2, x86_64:3]
         // def abi = project.hasProperty('flutterBuildAbi') ? project.flutterBuildAbi : 'armeabi-v7a'
-        versionCode 2  
+        versionCode 22  
         versionName "0.2.6" 
         multiDexEnabled true
     }
@@ -124,7 +126,7 @@ android {
         def abi = output.getFilter(OutputFile.ABI)
         if (abi != null) {  // null for the universal-debug, universal-release variants
             output.versionCodeOverride =
-                    defaultConfig.versionCode * 10 + versionCodes.get(abi)}
+                    2 * 10 + versionCodes.get(abi)}
       }
     }
 
