--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -50,14 +50,23 @@ jobs:
       - name: Extract version from tag
         uses: damienaicheh/extract-version-from-tag-action@v1.1.0
 
+      - name: Turn off analytics
+        run: flutter config --no-analytics
+
       - name: Pub Get Packages
-        run: "flutter pub get"
+        run: flutter pub get
 
       - name: Build APPBUNDLE
-        run: "flutter build appbundle"
+        run: flutter build appbundle
 
-      - name: Build APK
-        run: "flutter build apk --split-per-abi"
+      - name: Build arm APK
+        run: flutter build apk --release --split-per-abi --target-platform="android-arm"
+
+      - name: Build arm64 APK
+        run: flutter build apk --release --split-per-abi --target-platform="android-arm64"
+
+      - name: Build x64 APK
+        run: flutter build apk --release --split-per-abi --target-platform="android-x64"
 
       - name: Build Changelog
         id: github_release
