--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,8 +94,8 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         // def abiCodes = ['armeabi-v7a':1, 'arm64-v8a':2, x86_64:3]
         // def abi = project.hasProperty('flutterBuildAbi') ? project.flutterBuildAbi : 'armeabi-v7a'
-        versionCode 22  
-        versionName "0.2.6" 
+        versionCode flutterVersionCode.toInteger()  
+        versionName flutterVersionName
         multiDexEnabled true
     }
     signingConfigs {
@@ -124,7 +124,7 @@ android {
         def abi = output.getFilter(OutputFile.ABI)
         if (abi != null) {  // null for the universal-debug, universal-release variants
             output.versionCodeOverride =
-                    2 * 10 + versionCodes.get(abi)}
+                    variant.versionCode * 10 + versionCodes.get(abi)}
       }
     }
 
