--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: "17"
-          # cache: 'gradle'
+          cache: 'gradle'
 
       - uses: subosito/flutter-action@v2
         with:
