--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,7 +134,7 @@ android {
       dev {
         dimension "app"
         resValue "string", "app_name","Chrono Dev"
-        versionNameSuffix "-dev",
+        // versionNameSuffix "-dev",
         applicationIdSuffix ".free"
       }
     }
