--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -131,6 +131,11 @@ android {
     flavorDimensions "app"
 
     productFlavors {
+ prod {
+        dimension "app"
+        resValue "string", "app_name","Chrono"
+      }
+
       dev {
         dimension "app"
         resValue "string", "app_name","Chrono Dev"
