--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
-  package="com.vicolo.chrono"> android:installLocation="internalOnly" > <uses-permission
+  package="com.vicolo.chrono" android:installLocation="internalOnly">
+  <uses-permission
     android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
   <uses-permission
     android:name="android.permission.WAKE_LOCK" />
@@ -12,9 +13,14 @@
     android:name="android.permission.VIBRATE" />
   <uses-permission
     android:name="android.permission.INTERNET" />
+  <uses-permission
+    android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
   <!-- For apps with targetSDK=31 (Android 12) -->
   <uses-permission
     android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+  <uses-permission
+    android:name="android.permission.USE_EXACT_ALARM" />
+
   <application
     android:label="Chrono"
     tools:replace="android:label"
