--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,7 +140,7 @@ android {
         dimension "app"
         resValue "string", "app_name", "Chrono Dev"
         // versionNameSuffix "-dev",
-        applicationIdSuffix ".free"
+        applicationIdSuffix ".dev"
       }
     }
 }
