--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,8 +32,11 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
+    minSdkVersion 21
+    targetSdkVersion flutter.targetSdkVersion
+
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -89,9 +92,7 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         
-        minSdkVersion 21
-        targetSdkVersion flutter.targetSdkVersion
-        // def abiCodes = ['armeabi-v7a':1, 'arm64-v8a':2, x86_64:3]
+               // def abiCodes = ['armeabi-v7a':1, 'arm64-v8a':2, x86_64:3]
         // def abi = project.hasProperty('flutterBuildAbi') ? project.flutterBuildAbi : 'armeabi-v7a'
         versionCode flutterVersionCode.toInteger()  
         versionName flutterVersionName
