--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,15 @@ android {
         applicationIdSuffix ".dev"
       }
     }
+
+    dependenciesInfo {
+        // Disables dependency metadata when building APKs.
+        // This is for the signed .apk that we post to GitHub, so the dependency metadata isn't relevant.
+        includeInApk false
+        // Enable dependency metadata when building Android App Bundles.
+        // This is for the Google Play Store, so we'll want the metadata.
+        includeInBundle true
+    }
 }
 
 flutter {
