--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
     android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
   <uses-permission
     android:name="android.permission.WAKE_LOCK" />
-  <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
   <uses-permission
     android:name="android.permission.USE_FULL_SCREEN_INTENT" />
-  <!-- <uses-permission -->
-  <!--   android:name="android.permission.SYSTEM_ALERT_WINDOW" /> -->
+  <uses-permission
+    android:name="android.permission.SYSTEM_ALERT_WINDOW" />
   <uses-permission
     android:name="android.permission.VIBRATE" />
   <uses-permission
