--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,12 +98,12 @@ dev_dependencies:
   change_app_package_name: ^1.1.0
   flutter_launcher_icons: ^0.13.1
 
-
-flutter_launcher_icons:
-  android: "ic_launcher"
-  image_path: "assets/icon/1024.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
-
+#
+# flutter_launcher_icons:
+#   android: "ic_launcher"
+#   image_path: "assets/icon/1024.png"
+#   min_sdk_android: 21 # android min sdk min:16, default 21
+#
 flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
