--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,15 +83,13 @@ dependency_overrides:
 #   min_sdk_android: 21 # android min sdk min:16, default 21
 #
 flutter:
+  generate: true
   uses-material-design: true
   assets:
     - assets/timezones.db
     - assets/images/
     - assets/ringtones/
   fonts:
-    - family: Montserrat
-      fonts:
-        - asset: fonts/Montserrat/Montserrat-VariableFont.ttf
     - family: Rubik
       fonts:
         - asset: fonts/Rubik/Rubik-VariableFont.ttf
