--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
   <!--   android:name="android.permission.SYSTEM_ALERT_WINDOW" /> -->
   <uses-permission
     android:name="android.permission.VIBRATE" />
-  <uses-permission
-    android:name="android.permission.INTERNET" />
+  <!-- <uses-permission -->
+  <!--   android:name="android.permission.INTERNET" /> -->
   <uses-permission
     android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
   <!-- For Android 12 and higher -->
