--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,16 +5,13 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 0.3.4+11
 
 environment:
-  sdk: ">=2.18.6 <3.0.0"
+  sdk: ">=2.18.6 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  flutter_boot_receiver:
-    git:
-      url: https://github.com/AhsanSarwar45/flutter_boot_receiver.git
-      ref: master
+  flutter_boot_receiver: ^1.0.0
   # flutter_boot_receiver:
   #   path: "../flutter_boot_receiver"
   intl: ^0.19.0
@@ -46,6 +43,7 @@ dependencies:
   table_calendar: ^3.0.8
   vector_math: ^2.1.4
   fuzzywuzzy: ^1.1.2
+  flutter_show_when_locked: ^0.0.1
   # flex_color_picker:
   #   path: ../flex_color_picker
   flex_color_picker:
