--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,13 @@ dependencies:
   sqflite: ^2.2.2
   flutter_slidable: ^3.1.0
   flutter_system_ringtones: ^0.0.6
-  android_alarm_manager_plus: ^4.0.1
-  # android_alarm_manager_plus:
-  #   git:
-  #     url: https://github.com/AhsanSarwar45/android_alarm_manager_plus
-  #     ref: main
+  # android_alarm_manager_plus: ^4.0.1
+  android_alarm_manager_plus:
+    # path: "../plus_plugins/packages/android_alarm_manager_plus/"
+    git:
+      url: https://github.com/AhsanSarwar45/plus_plugins
+      path: packages/android_alarm_manager_plus
+      ref: alarm_show_intent
   just_audio: ^0.9.31
   awesome_notifications: ^0.9.3
   audio_session: ^0.1.13
