--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,15 +5,13 @@
     android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
   <uses-permission
     android:name="android.permission.WAKE_LOCK" />
+  <!-- <uses-permission android:name="android.permission.FOREGROUND_SERVICE" /> -->
+  <!-- <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" /> -->
   <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
   <uses-permission
     android:name="android.permission.USE_FULL_SCREEN_INTENT" />
-  <!-- <uses-permission -->
-  <!--   android:name="android.permission.SYSTEM_ALERT_WINDOW" /> -->
   <uses-permission
     android:name="android.permission.VIBRATE" />
-  <!-- <uses-permission -->
-  <!--   android:name="android.permission.INTERNET" /> -->
   <uses-permission
     android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
   <!-- For Android 12 and higher -->
@@ -105,6 +103,13 @@
       android:permission="android.permission.BIND_JOB_SERVICE" 
       android:directBootAware="true"
       />
+     <!-- <service android:name="me.carda.awesome_notifications.core.services.ForegroundService" -->
+     <!--      android:enabled="true"             -->
+     <!--      android:exported="false" -->
+     <!--      android:stopWithTask="true" -->
+     <!--  android:foregroundServiceType="phoneCall" -->
+     <!--  tools:replace="android:foregroundServiceType" -->
+     <!--  ></service> -->
     <receiver
       android:enabled="true"
       android:exported="true"
