--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: clock_app
 description: An alarm, clock, timer and stowatch app.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 0.4.0+13
+version: 0.4.0-beta2+13
 
 environment:
   sdk: ">=2.18.6 <4.0.0"
