--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: "17"
-          cache: 'gradle'
+          # cache: 'gradle'
 
       - uses: subosito/flutter-action@v2
         with:
