--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -43,6 +43,11 @@ jobs:
       - name: Pub Get Packages
         run: flutter pub get
 
+      - name: Clear cache
+        run: |
+          flutter clean
+          rm -rf ~/.gradle/caches
+
       - name: Build APK
         run: flutter build apk --release --split-per-abi --flavor dev
 
