Changed gradle version

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
-  package="com.vicolo.chrono" android:installLocation="internalOnly">
+  android:installLocation="internalOnly">
   <uses-permission
     android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
   <uses-permission
