--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
     android:name="android.permission.USE_EXACT_ALARM" />
 
   <application
-    android:label="Chrono"
+    android:label="@string/app_name"
     tools:replace="android:label"
     android:name="${applicationName}"
     android:icon="@mipmap/ic_launcher">
