Make widgets configurable

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -126,14 +126,14 @@
         <category android:name="android.intent.category.DEFAULT" />
       </intent-filter>
     </receiver>
-    <receiver android:name="AnalogueClockWidgetProvider" android:exported="true">
+    <receiver android:name="AnalogueClockWidgetProvider" android:exported="true" android:label="Analogue">
       <intent-filter>
         <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
       </intent-filter>
       <meta-data android:name="android.appwidget.provider"
         android:resource="@xml/analogue_clock_widget" />
     </receiver>
-    <receiver android:name="DigitalClockWidgetProvider" android:exported="true">
+    <receiver android:name="DigitalClockWidgetProvider" android:exported="true" android:label="Digital">
       <intent-filter>
         <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
       </intent-filter>
