--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,10 @@ dependencies:
   material_color_utilities: ^0.8.0
   flutter_oss_licenses: ^3.0.2  
   locale_names: ^1.1.1
+  # home_widget: ^0.5.0
+  home_widget:
+    path: "../home_widget/"
+
 
 dev_dependencies:
   flutter_test:
