--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -139,7 +139,15 @@
       </intent-filter>
       <meta-data android:name="android.appwidget.provider"
         android:resource="@xml/digital_clock_widget" />
-    </receiver>
+      </receiver>
+    <!--  <receiver android:name="DigitalClockDateWidgetProvider" android:exported="true" android:label="Digital with Date"> -->
+    <!--   <intent-filter> -->
+    <!--     <action android:name="android.appwidget.action.APPWIDGET_UPDATE" /> -->
+    <!--   </intent-filter> -->
+    <!--   <meta-data android:name="android.appwidget.provider" -->
+    <!--     android:resource="@xml/digital_clock_date_widget" /> -->
+    <!-- </receiver> -->
+
 
   </application>
 </manifest>
