--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,9 @@ dependencies:
   table_calendar: ^3.0.8
   vector_math: ^2.1.4
   fuzzywuzzy: ^1.1.2
-  # flutter_show_when_locked: ^0.0.3
-  flutter_show_when_locked:
-    path: "../flutter_show_when_locked/"
+  flutter_show_when_locked: ^0.0.4
+  # flutter_show_when_locked:
+  #   path: "../flutter_show_when_locked/"
   # flex_color_picker:
   #   path: ../flex_color_picker
   flex_color_picker:
