--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,8 +5,6 @@
     android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
   <uses-permission
     android:name="android.permission.WAKE_LOCK" />
-  <!-- <uses-permission android:name="android.permission.FOREGROUND_SERVICE" /> -->
-  <!-- <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" /> -->
   <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
   <uses-permission
     android:name="android.permission.USE_FULL_SCREEN_INTENT" />
@@ -14,12 +12,8 @@
     android:name="android.permission.VIBRATE" />
   <uses-permission
     android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
-      <!-- For before Android 12 -->
-   <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"
-    android:maxSdkVersion="32" />
-   <!-- For Android 12 and higher -->
-  <uses-permission
-    android:name="android.permission.USE_EXACT_ALARM" />
+   <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+  <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 
   <application
     android:label="@string/app_name"
