--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: clock_app
 description: An alarm, clock, timer and stowatch app.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 0.5.1+24
+version: 0.5.2+25
 
 environment:
   sdk: ">=2.18.6 <4.0.0"
@@ -78,6 +78,7 @@ dependencies:
       ref: main
   permission_handler: ^11.3.1
   device_info_plus: ^10.1.0
+  flutter_foreground_task: ^6.5.0
 
 
 dev_dependencies:
