--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
       ref: alarm_show_intent
   just_audio: ^0.9.31
   awesome_notifications: ^0.9.3
+  # awesome_notifications:
+  #   path: "../awesome_notifications"
   audio_session: ^0.1.13
   flutter_fgbg: ^0.3.0
   move_to_background: ^1.0.2
@@ -78,7 +80,8 @@ dependencies:
       ref: main
   permission_handler: ^11.3.1
   device_info_plus: ^10.1.0
-  flutter_foreground_task: ^6.5.0
+  flutter_foreground_task:
+    path: "../flutter_foreground_task"
 
 
 dev_dependencies:
