--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 0.5.2-beta1+25
 
 environment:
-  sdk: ">=2.18.6 <4.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -86,6 +86,10 @@ dependencies:
       url: https://github.com/vicolo-dev/flutter_foreground_task
       ref: master
   logger: ^2.3.0
+  flutter_animate: ^4.5.0
+  # animated_reorderable_list: ^1.1.1
+  # animated_reorderable_list:
+    # path: "../animated_reorderable_list"
     #
 
 dev_dependencies:
