--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: clock_app
 description: An alarm, clock, timer and stowatch app.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 0.5.2-beta1+25
+version: 0.6.0-beta1+26
 
 environment:
   sdk: '>=3.4.0 <4.0.0'
@@ -88,6 +88,7 @@ dependencies:
       ref: master
   logger: ^2.4.0
   flutter_animate: ^4.5.0
+  quick_actions: ^1.0.7
   # animated_reorderable_list: ^1.1.1
   # animated_reorderable_list:
     # path: "../animated_reorderable_list"
