--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ migrate_working_dir/
 /build/
 coverage/
 
+!/android/gradle/wrapper/gradle-wrapper.jar
+
 # Symbolication related
 app.*.symbols
 
