--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
   <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SYSTEM_EXEMPTED" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
 
   <application
     android:label="@string/app_name"
@@ -114,7 +114,7 @@
       />
     <service 
     android:name="com.pravera.flutter_foreground_task.service.ForegroundService"
-      android:foregroundServiceType="systemExempted"  
+      android:foregroundServiceType="specialUse"  
       android:exported="false" />
      <!-- <service android:name="me.carda.awesome_notifications.core.services.ForegroundService" -->
      <!--      android:enabled="true"             -->
