--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ dependencies:
   flutter_animate: ^4.5.0
   quick_actions: ^1.0.7
   file_picker: ^8.0.7
+  background_fetch: ^1.3.7
   # animated_reorderable_list: ^1.1.1
   # animated_reorderable_list:
     # path: "../animated_reorderable_list"
