--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,8 @@ dependencies:
   quick_actions: ^1.0.7
   file_picker: ^8.0.7
   background_fetch: ^1.3.7
+  clock: ^1.1.1
+
   # animated_reorderable_list: ^1.1.1
   # animated_reorderable_list:
     # path: "../animated_reorderable_list"
