--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -115,6 +115,12 @@ android {
     }
 }
 
+dependencies {
+    implementation "androidx.documentfile:documentfile:1.0.1"
+}
+
+
+
 flutter {
     source '../..'
 }
