--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,6 @@ dependencies:
   introduction_screen: ^3.1.12
   app_settings: ^5.1.1
   auto_start_flutter: ^0.1.1
-  pick_or_save: ^2.2.4
   package_info_plus: ^6.0.0
   receive_intent: ^0.2.5
   watcher: ^1.1.0
@@ -92,6 +91,7 @@ dependencies:
   file_picker: ^8.0.7
   background_fetch: ^1.3.7
   clock: ^1.1.1
+  mime: ^1.0.6
 
   # animated_reorderable_list: ^1.1.1
   # animated_reorderable_list:
