--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,8 @@ dependencies:
   background_fetch: ^1.3.7
   clock: ^1.1.1
   mime: ^1.0.6
+  analog_clock: ^0.1.1
+  animated_analog_clock: ^0.1.0
   # animated_reorderable_list: ^1.1.1
   # animated_reorderable_list:
     # path: "../animated_reorderable_list"
