--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
     android:label="@string/app_name"
     tools:replace="android:label"
     android:name="${applicationName}"
+    android:allowBackup="false"
     android:icon="@mipmap/ic_launcher">
     <activity
       android:name=".MainActivity"
