--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: clock_app
 description: An alarm, clock, timer and stowatch app.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 0.6.0-beta1+26
+version: 0.6.0+28
 
 environment:
   sdk: '>=3.4.0 <4.0.0'
